<resources>
    <string name="hello_world">Hello World, Date!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">在线通讯录</string>
    <string name="app_name">通信录</string>
    <string name="manager">通讯录管理</string>
    <string name="welcome_lable">欢迎登陆</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="new_phone">添加</string>
    <string name="all_delete">全删</string>
    <string name="mean_quit">退出</string>
    <string name="User_new">账号</string>
    <string name="dail">拨号</string>
    <string name="send_massage">发短信</string>
    <string name="check">查看</string>
    <string name="delete">删除</string>
    <!-- 详情 -->
    <string name="title_detail">电话详情</string>
    <string name="bt_modificate">修改</string>

    <string name="detail">电话详情</string>
    <string name="phone_name">姓  名</string>
    <string name="phone_number">号  码</string>
    <string name="phone_company">固  话</string>
    <string name="phone_address">地  址</string>
    <string name="phone_email">邮  箱</string>
    <string name="list_fanhui">返回</string>
    <string name="list_dingwei">定位</string>
    <!-- 修改页面 -->
    <string name="mf_lable_title">修改个人名片</string>
    <string name="phone_save">保存</string>
    <string name="phone_fanhui">返回</string>
</resources>
