<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_phone"
        android:orderInCategory="100"
        android:title="@string/new_phone"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_User"
        android:orderInCategory="100"
        android:title="@string/User_new"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_all_delete"
        android:orderInCategory="100"
        android:title="@string/all_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_quit"
        android:orderInCategory="100"
        android:title="@string/mean_quit"
        app:showAsAction="never" />
</menu>